--- a/ClientApp/src/app/app.component.css
+++ b/ClientApp/src/app/app.component.css
@@ -28,3 +28,15 @@
    background: #000;
    opacity: 0.85 !important;
  }
+
+ .cdk-overlay-pane.tm-file-preview-dialog-panel {
+   display: flex;
+   flex-basis: 50%;
+   height: 50%;
+ }
+
+ app-preview {
+   display: flex;
+   flex-basis: 100%;
+   height: 100%;
+ }
