--- a/ClientApp/src/app/dashboard/preview/preview.component.css
+++ b/ClientApp/src/app/dashboard/preview/preview.component.css
@@ -1,5 +1,11 @@
 div {
-    width: 50%;
-    height: 50%;
+    width: 100%;
+    height: 100%;
     background-color: #ffffff;
+    display: flex;
+    flex-direction: column;
+}
+
+div input {
+    width: 250px;
 }
