--- a/ClientApp/src/app/nav/nav.component.html
+++ b/ClientApp/src/app/nav/nav.component.html
@@ -4,6 +4,10 @@
         <a routerLink="/signup">Signup</a>
     </div>
     <ng-template #other_content>
+        <div class="main_container">
+            <a routerLink="/dashboard">DashBoard</a>
+            <a routerLink="/dashboard/tooltip">tooltip</a>
+        </div>
         <Button (click)="SignOut()">SignOut</Button>
     </ng-template>
 </div>
